# bumpcalver

./: .coverage  .gitignore  404.html  CHANGELOG.md  DOCUMENTATION_MIGRATION.md  README.md  bumpcalver-history.json  coverage.xml  demo_pyproject.toml  demo_version.py  index.html  latest  makefile  mkdocs.yml  pyproject.toml  report.xml  requirements.txt  sonar-project.properties  stable  versions.json
.bumpcalver/backups/: 20251012_005635_358_makefile  20251012_005635_361_example.py  (+17 more)
.devcontainer/: Dockerfile  devcontainer.json
2025.07.01/: 404.html  index.html
2025.08.01/: 404.html  index.html
2025.10.11.2/: 404.html  index.html
2025.4.12.1/: index.html
2025.8.2.3/: objects.inv
2026.5.24.1/: 404.html  index.html
_venv/: pyvenv.cfg
about/: index.html
contribute/: index.html
dev/: index.html
docs/: about.md  calendar-versioning-guide.md  development-guide.md  hybrid-versioning-guide.md  index.md  mike-quickref.md  quickstart.md  release-notes.md  undo.md  versioning.md
examples/: .env-sample  Cargo.toml  bumpcalver.toml  dockerfile  example.csproj  example.json  example.py  example.toml  example.xml  example.yaml  gradle.properties  makefile  new_file_types_config.toml  p.py  package.json  pyproject.toml  setup.cfg  sonar-project.properties  version.properties  version.rb  version.txt
examples/configuration/: index.html
examples/filelayout/: index.html
index2/: index.html
print_page/: index.html
quickstart/: index.html
quickstart2/: index.html
release-notes/: index.html
scripts/: deploy_docs.py
search/: search_index.json
site/: 404.html
tests/: test_calver_comprehensive.py  test_cli.py  test_cli_undo.py  test_config.py  test_date_files.py  test_git_utils.py  test_handlers.py  test_hybrid_versioning.py  test_integration_isolated.py  test_undo.py  test_utils.py  test_utils_isolated.py
timezones/: index.html
v2025.8.2.1/: 404.html
(+115 files in other folders)
