[project]
name = "example PyProject.toml"
version = "2026.3.8.1"
requires-python = ">=3.10"
description = "A powerful CLI tool for effortless calendar-based version management"
keywords = [ "cli", "tool", "calendar", "version", "management", "configuration", "example",]
readme = "README.md"

[project.license]
file = "LICENSE"

[tool.bumpcalver]
# Standard CalVer format (default)
version_format = "{current_date}-{build_count:03}"
date_format = "%y.%m.%d"
timezone = "America/New_York"
git_tag = true
auto_commit = true

# --- Pre-release suffix formats (optional) ---
# Defaults produce .beta / .rc / .release when --beta / --rc / --release is used.
# Use {beta_count} / {rc_count} for PEP 440-style counters (b1, rc1, …).
# beta_format    = "b{beta_count}"   # → 26.05.24.1b1
# rc_format      = "rc{rc_count}"    # → 26.05.24.1rc1
# release_format = ".release"

# --- Hybrid Semantic + Calendar Versioning (optional) ---
# Uncomment and set major/minor/patch to use a hybrid format such as 1.0-20260523.1
# major = 1
# minor = 0
# patch = 0
# version_format = "{major}.{minor}-{current_date}.{build_count}"
# date_format = "%Y%m%d"
[[tool.bumpcalver.file]]
path = "pyproject.toml"
file_type = "toml"
variable = "project.version"
version_standard = "python"

[[tool.bumpcalver.file]]
path = "examples/makefile"
file_type = "makefile"
variable = "APP_VERSION"
version_standard = "default"

[[tool.bumpcalver.file]]
path = "examples/dockerfile"
file_type = "dockerfile"
variable = "arg.VERSION"
version_standard = "default"

[[tool.bumpcalver.file]]
path = "examples/dockerfile"
file_type = "dockerfile"
variable = "env.APP_VERSION"
version_standard = "default"

[[tool.bumpcalver.file]]
path = "examples/p.py"
file_type = "python"
variable = "__version__"
version_standard = "python"

